datavalue_theme_15/public/scss/partials/_frappe.scss
/* ... */
.modal .modal-header .modal-title {
  font-weight: 700;
  font-size: 18px;
}

.dropdown-item:hover, .dropdown-item:focus {
  background-color: var(--blue-100);
  color: var(--blue-700);
}

.dropdown-item.active, .dropdown-item:active {
  background-color: var(--blue-600);
  color: #ffffff;
}

.control-input {
  &[data-option="Email"], &[data-option="Phone"] {
    > input {
      padding-left: 28px;
    }

    &:before {
      width: 24px;
      height: 24px;
      position: absolute;
      left: 8px;
      top: 2px;
      z-index: 1;
      display: block;
      font-size: 16px;
      font-weight: 300;
      font-family: "Font Awesome 5 Pro", serif;
      color: #818d95;
      content: "";
    }
  }

  &[data-option="Email"] {
    &:before {
      content: "\f0e0";
    }
  }

  &[data-option="Phone"] {
    &:before {
      content: "\f879";
      font-size: 14px;
      top: 5px;
    }
  }
}

.frappe-control {
  &[data-fieldtype="_Currency"] {
    .control-input {
      position: relative;

      > input {
        padding-left: 28px;
      }

      &:before {
        width: 24px;
        height: 24px;
        position: absolute;
        left: 8px;
        top: 2px;
        z-index: 1;
        display: block;
        font-size: 16px;
        font-weight: 300;
        font-family: "Font Awesome 5 Pro", serif;
        color: #818d95;
        content: "\f2e8";
      }
    }
  }

  &[data-fieldtype="Date"], &[data-fieldtype="Time"] {
    .control-input {
      position: relative;

      > input {
        padding-left: 28px;
      }

      &:before {
        width: 24px;
        height: 24px;
        position: absolute;
        left: 8px;
        top: 2px;
        z-index: 1;
        display: block;
        font-size: 16px;
        font-weight: 300;
        font-family: "Font Awesome 5 Pro", serif;
        color: #818d95;
        content: "";
      }
    }
  }

  &[data-fieldtype="Date"] {
    .control-input {
      &:before {
        content: "\f073";
      }
    }
  }

  &[data-fieldtype="Time"] {
    .control-input {
      &:before {
        content: "\f017";
      }
    }
  }
}

.awesomplete > [role=listbox] {
  border-color: var(--primary);
  margin-top: 5px;
}

.awesomplete > [role=listbox] > li .link-option, .awesomplete > [role=listbox] > [role=option] .link-option {
  font-weight: 700;
  color: var(--primary);
}

.frappe-control[data-fieldtype="Link"] {
  .awesomplete > input {
    width: calc(100% - 38px);
  }

  .action-btn, .link-btn {
    right: 40px !important;
    top: 0 !important;
  }

  .link-btn-add {
    position: absolute;
    top: 0;
    right: 0;
    display: none !important;

    .btn.btn-primary {
      width: 30px;
      height: 28px;
      line-height: 28px;
      font-size: 16px;
      padding: 0;
    }
  }

  a.btn-open {
    background: var(--primary);
    height: 18px;
    line-height: 18px;
    display: inline-block;
    padding: 0 8px;
    font-size: 12px;
    color: #fff;
    border-radius: 4px;
    position: relative;
    top: 0;
    transition: all 0.2s ease-in-out;

    .icon {
      stroke: #ffffff
    }

    &:hover {
      background: var(--blue-700);
    }
  }

  a.btn-clear {
    background: var(--red-200);
    height: 18px;
    line-height: 18px;
    display: inline-block;
    padding: 0 8px;
    font-size: 12px;
    color: var(--red-600);
    border-radius: 4px;
    position: relative;
    top: 0;
    transition: all 0.2s ease-in-out;

    .icon {
      stroke: var(--danger)
    }

    &:hover {
      background: var(--red-300);
      color: var(--red-700);
    }
  }

  .no-add-btn {
    .action-btn, .link-btn {
      right: 8px !important;
    }

    > .awesomplete > input {
      width: 100%;
    }
  }
}

.awesomplete > [role=listbox] > li:hover, .awesomplete > [role=listbox] > li[aria-selected=true], .awesomplete > [role=listbox] > [role=option]:hover, .awesomplete > [role=listbox] > [role=option][aria-selected=true] {
  background-color: var(--awesomplete-hover-bg);
  color: var(--awesomplete-hover-color);
}

.frappe-control .action-btn, .frappe-control .link-btn {
  top: 0px;
  right: 8px;
}

.filter-field, .standard-filter-section {
  .frappe-control[data-fieldtype=Link] {
    .awesomplete > input {
      width: 100%;
    }

    .link-btn-add {
      display: none !important;
    }
  }
}

.grid-row > .row .col, .form-section .grid-row > .section-body .col, .form-dashboard-section .grid-row > .section-body .col, .grid-row > .dialog-assignment-row .col {
  padding: 3px 6px;
}

.row-check {
  height: 28px;
}

.grid-static-col, .row-index {
  height: 28px;
}

.grid-body .editable-row .frappe-control[data-fieldtype=Select].form-group .select-icon {
  top: 0px;
}


.grid-body .editable-row {

  .frappe-control .action-btn, .frappe-control .link-btn {
    right: 0px !important;
    top: 0px;
  }

  .frappe-control[data-fieldtype=Link] a.btn-open {
    height: 18px;
    line-height: 18px;
    padding: 0px 8px;
    font-size: 11px;
    top: 0px;
  }

  .frappe-control[data-fieldtype="Link"] .link-btn-add {
    display: none !important;
  }

  .form-control {
    width: 100% !important;
    box-shadow: none !important;
  }
}

.widget.onboarding-widget-box {
  background-color: var(--blue-50);
  border: 1px solid var(--blue-300);
  padding: 15px;
  border-radius: 10px;
}

.layout-main-section.frappe-card {
  margin-bottom: 20px;
}

[data-page-route="Workspaces"] .codex-editor .codex-editor__redactor .ce-block .ce-block__content {
  padding: 0px 7px 15px 7px;
}

[data-page-route="Workspaces"] .codex-editor .codex-editor__redactor {
  padding-bottom: 0px !important;
}

[data-page-route="Workspaces"] .layout-main .layout-main-section {
  padding-bottom: 0;
  margin-bottom: 20px;
}

[data-page-route="dashboard-view"] {
  .dashboard {
    padding-bottom: 1px;
  }
}

[data-fieldtype="Icon"] {
  .static-area {
    .selected-icon {
      display: inline-block;
    }
  }
}

.frappe-control[data-fieldtype="Icon"] input {
  padding-left: 40px !important;
}
/* ... */

